Bug 765845: Reduce calling frequency of SetTextRenderingParams. r=jrmuizel a=lsblakk