gfx/2d/DrawTargetD2D.cpp
@@ -857,9 +857,9 @@ DrawTargetD2D::FillGlyphs(ScaledFont *aFont,
   IDWriteRenderingParams *params = NULL;
   if (aRenderOptions) {
     if (aRenderOptions->GetType() != FONT_DWRITE) {
-    gfxDebug() << *this << ": Ignoring incompatible GlyphRenderingOptions.";
-    // This should never happen.
-    MOZ_ASSERT(false);
+      gfxDebug() << *this << ": Ignoring incompatible GlyphRenderingOptions.";
+      // This should never happen.
+      MOZ_ASSERT(false);
     } else {
       params = static_cast<const GlyphRenderingOptionsDWrite*>(aRenderOptions)->mParams;
     }
@@ -878,7 +878,12 @@ DrawTargetD2D::FillGlyphs(ScaledFont *aFont,
 
   PrepareForDrawing(rt);
 
-  rt->SetTextRenderingParams(params);
+  if (rt != mRT || params != mTextRenderingParams) {
+    rt->SetTextRenderingParams(params);
+    if (rt == mRT) {
+      mTextRenderingParams = params;
+    }
+  }
 
   RefPtr<ID2D1Brush> brush = CreateBrushForPattern(aPattern, aOptions.mAlpha);
 
